use list.of instead of Collections.singletonList